Create alarms only in production

--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -497,6 +497,7 @@ Resources:
       VisibilityTimeout: 3600 # 1 hour
   AudioCallbackQueueSlowAlarm:
     Type: AWS::CloudWatch::Alarm
+    Condition: IsProduction
     Properties:
       AlarmName: !Sub ERROR [CMS] Audio queue <${EnvironmentTypeAbbreviation}> FALLING BEHIND (${RootStackName})
       AlarmDescription: !Sub >-
@@ -530,6 +531,7 @@ Resources:
         - { Key: prx:dev:application, Value: CMS }
   AudioCallbackQueueVerySlowAlarm:
     Type: AWS::CloudWatch::Alarm
+    Condition: IsProduction
     Properties:
       AlarmName: !Sub FATAL [CMS] Audio queue <${EnvironmentTypeAbbreviation}> STALLED (${RootStackName})
       AlarmDescription: !Sub >-
@@ -635,6 +637,7 @@ Resources:
       VisibilityTimeout: 3600 # 1 hour
   ImageCallbackQueueSlowAlarm:
     Type: AWS::CloudWatch::Alarm
+    Condition: IsProduction
     Properties:
       AlarmName: !Sub ERROR [CMS] Image queue <${EnvironmentTypeAbbreviation}> FALLING BEHIND (${RootStackName})
       AlarmDescription: !Sub >-
@@ -668,6 +671,7 @@ Resources:
         - { Key: prx:dev:application, Value: CMS }
   ImageCallbackQueueVerySlowAlarm:
     Type: AWS::CloudWatch::Alarm
+    Condition: IsProduction
     Properties:
       AlarmName: !Sub FATAL [CMS] Image queue <${EnvironmentTypeAbbreviation}> STALLED (${RootStackName})
       AlarmDescription: !Sub >-
