--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -503,7 +503,7 @@ Resources:
       Protocol: HTTPS
 
   DefaultJobQueue:
-    Type: AWS::SQS::Queue # TODO Alarms?
+    Type: AWS::SQS::Queue
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
@@ -577,7 +577,7 @@ Resources:
         - { Key: prx:dev:application, Value: Feeder }
 
   FixerCallbackQueue:
-    Type: AWS::SQS::Queue # TODO Alarms?
+    Type: AWS::SQS::Queue
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
