--- a/stacks/apps/publish.yml
+++ b/stacks/apps/publish.yml
@@ -415,7 +415,7 @@ Resources:
     Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
     Properties:
       CloudFrontOriginAccessIdentityConfig:
-        Comment: !Sub Publish uploads ${AWS::StackName} # TODO
+        Comment: !Sub ${EnvironmentType} Publish uploads
 
 Outputs:
   TargetGroupFullName:
