Reduce flow logs retention

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -448,7 +448,7 @@ Resources:
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
         VPCSubnet3: !GetAtt VPCStack.Outputs.Subnet3
-        VPCCertificateArn: !GetAtt CertificateStack.Outputs.WildcardCertificateArn # TODO Give it a separate cert
+        VPCCertificateArn: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
         MetricsKinesisStream: !Join ["", ["/prx/", !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation], "/analytics-ingest-lambda/METRICS_KINESIS_STREAM"]]
