--- a/stacks/shared-vpc/flow-logs.yml
+++ b/stacks/shared-vpc/flow-logs.yml
@@ -12,12 +12,13 @@ Parameters:
 
 Conditions:
   IsEnabled: !Equals [Enabled, Enabled] # TODO
+  IsProduction: !Equals [!Ref EnvironmentType, Production]
 
 Resources:
   FlowLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
-      RetentionInDays: 14
+      RetentionInDays: !If [IsProduction, 7, 3]
   FlowLogGroupTags:
     Type: Custom::CloudWatchLogGroupTags
     Properties:
