Fix Router ALB alarm names

--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -454,7 +454,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [Dovetail] Load balancer <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS (${RootStackName})
+      AlarmName: !Sub ERROR [Dovetail-Router] Load balancer <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Dovetail's dedicated application load balancer (ALB)
         is returning 5XX errors to clients. The errors may or may not be
@@ -490,7 +490,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [Dovetail] Load balancer <${EnvironmentTypeAbbreviation}> RESPONDING SLOWLY (${RootStackName})
+      AlarmName: !Sub ERROR [Dovetail-Router] Load balancer <${EnvironmentTypeAbbreviation}> RESPONDING SLOWLY (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Dovetail's dedicated application load balancer (ALB)
         is seeing very slow response times for a significant percent of the
