Improve alarm reminders

--- a/devops/chat-ops/cloudwatch-alarm-reminders/template.yml
+++ b/devops/chat-ops/cloudwatch-alarm-reminders/template.yml
@@ -28,11 +28,17 @@ Resources:
           SEARCH_REGIONS: !Join [",", !Ref Regions]
           SEARCH_ACCOUNTS: !Join [",", !Ref AccountIds]
       Events:
-        HourlyPoller:
+        WeekdayPoller:
           Properties:
             Description: Invokes the CloudWatch Alarm reminder function
             Enabled: true
-            Schedule: rate(1 hour)
+            Schedule: cron(0 1,13,15,17,19,21,23 * * MON-FRI *)
+          Type: Schedule
+        WeekendPoller:
+          Properties:
+            Description: Invokes the CloudWatch Alarm reminder function
+            Enabled: true
+            Schedule: cron(0 1,13,17,21 * * SAT-SUN *)
           Type: Schedule
       Handler: index.handler
       MemorySize: 192
