--- a/devops/chat-ops/cloudwatch-alarm-reminders/template.yml
+++ b/devops/chat-ops/cloudwatch-alarm-reminders/template.yml
@@ -30,15 +30,17 @@ Resources:
       Events:
         WeekdayPoller:
           Properties:
-            Description: Invokes the CloudWatch Alarm reminder function
+            Description: >-
+              Invokes the CloudWatch Alarm reminder function on weekdays
             Enabled: true
-            Schedule: cron(0 1,13,15,17,19,21,23 * * MON-FRI *)
+            Schedule: cron(0 1,13,15,17,19,21,23 ? * MON-FRI *)
           Type: Schedule
         WeekendPoller:
           Properties:
-            Description: Invokes the CloudWatch Alarm reminder function
+            Description: >-
+              Invokes the CloudWatch Alarm reminder function on weekends
             Enabled: true
-            Schedule: cron(0 1,13,17,21 * * SAT-SUN *)
+            Schedule: cron(0 1,13,17,21 ? * SAT-SUN *)
           Type: Schedule
       Handler: index.handler
       MemorySize: 192
