Enable performance insights

--- a/db/shared-apps-aurora-pg/database-cluster.yml
+++ b/db/shared-apps-aurora-pg/database-cluster.yml
@@ -127,7 +127,7 @@ Resources:
       # DBParameterGroupName: default.aurora-mysql5.7
       # PubliclyAccessible: 'true'
       DBInstanceClass: db.r6g.large
-      # EnablePerformanceInsights
+      EnablePerformanceInsights: true
       # MonitoringInterval
       # MonitoringRoleArn
       # PerformanceInsightsRetentionPeriod
