--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -528,15 +528,15 @@ Resources:
         - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Augury }
 
-  ForecastTaskLogGroup:
+  SlowWorkerTaskLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
       RetentionInDays: 14
-  ForecastTaskLogGroupTags:
+  SlowWorkerTaskLogGroupTags:
     Type: Custom::CloudWatchLogGroupTags
     Properties:
       ServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
-      LogGroupName: !Ref ForecastTaskLogGroup
+      LogGroupName: !Ref SlowWorkerTaskLogGroup
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -546,7 +546,7 @@ Resources:
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Augury }
-  ForecastTaskDefinition:
+  SlowWorkerTaskDefinition:
     Type: AWS::ECS::TaskDefinition
     Properties:
       ContainerDefinitions:
@@ -598,10 +598,10 @@ Resources:
           LogConfiguration:
             LogDriver: awslogs
             Options:
-              awslogs-group: !Ref ForecastTaskLogGroup
+              awslogs-group: !Ref SlowWorkerTaskLogGroup
               awslogs-region: !Ref AWS::Region
-              awslogs-stream-prefix: augury-forecast
-          Name: augury-forecast
+              awslogs-stream-prefix: fargate
+          Name: augury-workslow
       Cpu: "4096"
       ExecutionRoleArn: !GetAtt ExecutionRole.Arn
       Memory: "16384"
@@ -638,7 +638,7 @@ Resources:
       Environment:
         Variables:
           ECS_CLUSTER_ARN: !Ref EcsClusterArn
-          ECS_TASK_DEFINITION_ARN: !Ref ForecastTaskDefinition
+          ECS_TASK_DEFINITION_ARN: !Ref SlowWorkerTaskDefinition
           VPC_SUBNET_1: !Ref VpcPublicSubnet1Id
           VPC_SUBNET_2: !Ref VpcPublicSubnet2Id
           VPC_SUBNET_3: !Ref VpcPublicSubnet3Id
@@ -690,7 +690,7 @@ Resources:
           const listRes = await ecs.listTasks(listParams).promise();
           const running = listRes.taskArns.length;
           if (running < MAX_FARGATES) {
-            log('info', `launching 1 more fargate forecast worker (${running} running)`);
+            log('info', `launching 1 more fargate worker (${running} running)`);
             try {
               const runRes = await ecs.runTask(runParams).promise();
               log('debug', 'ran task', runRes);
@@ -710,7 +710,7 @@ Resources:
               Resource: "*"
             - Action: ecs:RunTask
               Effect: Allow
-              Resource: !Ref ForecastTaskDefinition
+              Resource: !Ref SlowWorkerTaskDefinition
             - Effect: Allow
               Action: iam:PassRole
               Resource:
@@ -734,7 +734,7 @@ Resources:
     Properties:
       FilterPattern: |-
         { $.msg = "forecast_job" }
-      LogGroupName: !Ref ForecastTaskLogGroup
+      LogGroupName: !Ref SlowWorkerTaskLogGroup
       MetricTransformations:
         - MetricName: !Sub ForecastJobElapsed${EnvironmentType}
           MetricNamespace: PRX/Augury
@@ -746,7 +746,7 @@ Resources:
     Properties:
       FilterPattern: |-
         { $.msg = "forecast_downloads" }
-      LogGroupName: !Ref ForecastTaskLogGroup
+      LogGroupName: !Ref SlowWorkerTaskLogGroup
       MetricTransformations:
         - MetricName: !Sub ForecastDownloadsElapsed${EnvironmentType}
           MetricNamespace: PRX/Augury
@@ -756,7 +756,7 @@ Resources:
     Properties:
       FilterPattern: |-
         { $.msg = "forecast_partitions" }
-      LogGroupName: !Ref ForecastTaskLogGroup
+      LogGroupName: !Ref SlowWorkerTaskLogGroup
       MetricTransformations:
         - MetricName: !Sub ForecastPartitionsElapsed${EnvironmentType}
           MetricNamespace: PRX/Augury
