Reference port params

--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -643,21 +643,21 @@ Resources:
           IpProtocol: tcp
           ToPort: 443
         - CidrIp: 0.0.0.0/0
-          FromPort: 3306
+          FromPort: !Ref SharedAuroraPostgresqlPort
           IpProtocol: tcp
-          ToPort: 3306
+          ToPort: !Ref SharedAuroraPostgresqlPort
         - CidrIpv6: ::/0
-          FromPort: 3306
+          FromPort: !Ref SharedAuroraPostgresqlPort
           IpProtocol: tcp
-          ToPort: 3306
+          ToPort: !Ref SharedAuroraPostgresqlPort
         - CidrIp: 0.0.0.0/0
-          FromPort: 5432
+          FromPort: !Ref CastlePostgresInstanceEndpointPort
           IpProtocol: tcp
-          ToPort: 5432
+          ToPort: !Ref CastlePostgresInstanceEndpointPort
         - CidrIpv6: ::/0
-          FromPort: 5432
+          FromPort: !Ref CastlePostgresInstanceEndpointPort
           IpProtocol: tcp
-          ToPort: 5432
+          ToPort: !Ref CastlePostgresInstanceEndpointPort
       Tags:
         - { Key: Name, Value: !Sub "${RootStackName}_augury_workslow" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
