--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -42,6 +42,7 @@ Parameters:
   VpcPublicSubnet1Id: { Type: AWS::EC2::Subnet::Id }
   VpcPublicSubnet2Id: { Type: AWS::EC2::Subnet::Id }
   VpcPublicSubnet3Id: { Type: AWS::EC2::Subnet::Id }
+  CloudWatchLogsEndpointAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   EcsLaunchEndpointsAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   SharedAuroraPostgresqlEndpoint: { Type: String }
   SharedAuroraPostgresqlPort: { Type: String }
@@ -694,7 +695,8 @@ Resources:
           VPC_SUBNET_2: !Ref VpcPublicSubnet2Id
           VPC_SUBNET_3: !Ref VpcPublicSubnet3Id
           SECURITY_GROUP_1: !GetAtt SlowWorkerSecurityGroup.GroupId
-          SECURITY_GROUP_2: !Ref EcsLaunchEndpointsAccessSecurityGroupId
+          SECURITY_GROUP_2: !Ref CloudWatchLogsEndpointAccessSecurityGroupId
+          SECURITY_GROUP_3: !Ref EcsLaunchEndpointsAccessSecurityGroupId
           MAX_FARGATES: "5"
           STARTED_BY: !Ref AWS::StackName
       Events:
@@ -727,7 +729,7 @@ Resources:
             awsvpcConfiguration: {
               subnets: [process.env.VPC_SUBNET_1, process.env.VPC_SUBNET_2, process.env.VPC_SUBNET_3],
               assignPublicIp: 'DISABLED',
-              securityGroups: [process.env.SECURITY_GROUP_1, process.env.SECURITY_GROUP_2],
+              securityGroups: [process.env.SECURITY_GROUP_1, process.env.SECURITY_GROUP_2, process.env.SECURITY_GROUP_3],
             },
           },
           platformVersion: '1.4.0',
