--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -290,6 +290,11 @@ Outputs:
     Description: AZ of private subnet 1
     Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet3AZ
 
+  CloudWatchLogsEndpointAccessSecurityGroupId:
+    Description: >-
+      The ID of a security group allows outbound HTTPS traffic to flow to
+      CloudWatch Logs VPC Endpoints
+    Value: !GetAtt InterfaceEndpointsStack.Outputs.CloudWatchLogsEndpointAccessSecurityGroupId
   EcsLaunchEndpointsAccessSecurityGroupId:
     Description: >-
       The ID of a security group that has VPC Endpoint access to AWS services
