Use fargate in prod

--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -323,7 +323,7 @@ Resources:
             - Name: BQ_DATASET
               Value: !If [IsProduction, production, staging]
             - Name: SLOW_WORKER_RELAY_SQS_URL
-              Value: !If [IsProduction, "", !Ref SlowWorkerRelaySqsQueue]
+              Value: !Ref SlowWorkerRelaySqsQueue
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -374,7 +374,7 @@ Resources:
     Properties:
       ContainerDefinitions:
         - Command:
-            - !If [IsProduction, worker, workfast]
+            - workfast
           Cpu: !If [IsProduction, 2000, 128]
           Environment:
             - Name: APP_NAME
@@ -416,7 +416,7 @@ Resources:
             - Name: BQ_DATASET
               Value: !If [IsProduction, production, staging]
             - Name: SLOW_WORKER_RELAY_SQS_URL
-              Value: !If [IsProduction, "", !Ref SlowWorkerRelaySqsQueue]
+              Value: !Ref SlowWorkerRelaySqsQueue
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -603,7 +603,7 @@ Resources:
             - Name: BQ_DATASET
               Value: !If [IsProduction, production, staging]
             - Name: SLOW_WORKER_RELAY_SQS_URL
-              Value: !If [IsProduction, "", !Ref SlowWorkerRelaySqsQueue]
+              Value: !Ref SlowWorkerRelaySqsQueue
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
