Use DB parameter for rule ports

--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -442,13 +442,13 @@ Resources:
           IpProtocol: tcp
           ToPort: 443
         - CidrIp: 0.0.0.0/0
-          FromPort: 3306
+          FromPort: !Ref SharedAuroraMysqlPort
           IpProtocol: tcp
-          ToPort: 3306
+          ToPort: !Ref SharedAuroraMysqlPort
         - CidrIpv6: ::/0
-          FromPort: 3306
+          FromPort: !Ref SharedAuroraMysqlPort
           IpProtocol: tcp
-          ToPort: 3306
+          ToPort: !Ref SharedAuroraMysqlPort
       SecurityGroupIngress:
         - CidrIp: !Ref VpcCidrBlock
           IpProtocol: tcp
