--- a/devops/chat-ops/cloudwatch-alarm-reminders/template.yml
+++ b/devops/chat-ops/cloudwatch-alarm-reminders/template.yml
@@ -1,7 +1,10 @@
+# devops/chat-ops/cloudwatch-alarm-reminders/template.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
-Description: >- # TODO
-  tktktk
+Description: >-
+  Creates a Lambda function and scheduled events to periodically scan a set of
+  accounts and regions for long-running CloudWatch alarms, and sends a summary
+  of them to Slack.
 
 Parameters:
   SlackMessageRelaySnsTopicArn:
@@ -18,8 +21,9 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: src/
-      Description: >- # TODO
-        tktktk
+      Description: >-
+        Scans a set of accounts and regions for long-running CloudWatch alarms,
+        and sends a summary to Slack
       Environment:
         Variables:
           AWS_NODEJS_CONNECTION_REUSE_ENABLED: "1"
