Move some CMS environment config into task def

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -32,10 +32,13 @@ Parameters:
   CloudWatchLogGroupTaggerServiceToken: { Type: String }
   SharedEcsAsgInstanceSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   DeploymentPackageBucketName: { Type: String }
+  BetaHostname: { Type: String }
   CmsHostname: { Type: String }
   ExchangeHostname: { Type: String }
   DovetailRouterHostname: { Type: String }
+  FeederHostname: { Type: String }
   IdHostname: { Type: String }
+  MetaHostname: { Type: String }
   SharedAuroraMysqlEndpoint: { Type: String }
   SharedAuroraMysqlPort: { Type: String }
   SharedRedisReplicationGroupEndpointAddress: { Type: String }
@@ -117,6 +120,12 @@ Resources:
         AnnounceResourcePrefix: !Ref AnnounceResourcePrefix
         PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
         FeedsS3BucketArn: !Ref FeedsS3BucketArn
+        CmsHostname: !Ref CmsHostname
+        FeederHostname: !Ref FeederHostname
+        IdHostname: !Ref IdHostname
+        MetaHostname: !Ref MetaHostname
+        NewRelicApiKeyPrxLite: !Ref NewRelicApiKeyPrxLite
+        BetaHostname: !Ref BetaHostname
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
