--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -235,6 +235,7 @@ Resources:
       MetricsHostname: !If [IsProduction, metrics.prx.org, metrics.staging.prx.tech]
       PlayHostname: !If [IsProduction, play.prx.org, play.staging.prx.tech]
       AdFilesHostname: a.prxu.org
+      MetaHostname: meta.prx.org
 
   # Root stacks
   ServerlessRootStack:
@@ -790,10 +791,13 @@ Resources:
         CloudWatchLogGroupTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchLogGroupTaggerServiceToken
         SharedEcsAsgInstanceSecurityGroupId: !GetAtt SharedEcsAsgSecurityGroupStack.Outputs.InstanceSecurityGroupId
         DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
+        BetaHostname: !GetAtt Constants.BetaHostname
         CmsHostname: !GetAtt Constants.CmsHostname
-        ExchangeHostname: !GetAtt Constants.ExchangeHostname
         DovetailRouterHostname: !GetAtt Constants.DovetailRouterHostname
+        ExchangeHostname: !GetAtt Constants.ExchangeHostname
+        FeederHostname: !GetAtt Constants.FeederHostname
         IdHostname: !GetAtt Constants.IdHostname
+        MetaHostname: !GetAtt Constants.MetaHostname
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
         AnnounceResourcePrefix: !GetAtt SharedAnnounceStack.Outputs.ResourcePrefix
