--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -56,6 +56,7 @@ Conditions:
   UseCertificate: !Or
     - !Condition CreateCertificate
     - !Condition HasAcmCertificateArn
+  HasFamilyTag: !Not [!Equals [!Ref FamilyTag, ""]]
 
 Mappings:
   FailoverCriteriaStatusCodesQuantity:
@@ -70,9 +71,14 @@ Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
+          default: Tagging
+        Parameters:
+          - EnvironmentType
+          - ProjectTag
+          - FamilyTag
+      - Label:
           default: Distribution
         Parameters:
-          - ProjectTag
           - Cnames
       - Label:
           default: Origin
@@ -114,8 +120,12 @@ Metadata:
         Parameters:
           - AcmCertificateArn
     ParameterLabels:
+      EnvironmentType:
+        default: prx:ops:environment
       ProjectTag:
-        default: Project tag
+        default: prx:dev:application
+      FamilyTag:
+        default: prx:dev:family
       Cnames:
         default: CNAMEs
       OriginDomain:
@@ -179,7 +189,22 @@ Parameters:
     AllowedPattern: ^.+$
     ConstraintDescription: must not be blank
     Description: >-
-      The value used for the Project tag on resources that support tagging.
+      The value used for the prx:dev:application tag on resources that support
+      tagging.
+  FamilyTag:
+    Type: String
+    ConstraintDescription: must not be blank
+    Description: >-
+      The value used for the prx:dev:family tag on resources that support
+      tagging.
+  EnvironmentType:
+    Type: String
+    AllowedValues:
+      - Staging
+      - Production
+    Description: >-
+      The value used for the prx:ops:environment tag on resources that support
+      tagging.
   Cnames:
     Type: CommaDelimitedList
     Description: >-
@@ -428,14 +453,13 @@ Resources:
       DomainName: !Select [0, !Ref Cnames]
       SubjectAlternativeNames: !Ref Cnames
       Tags:
-        - Key: Project
-          Value: !Ref ProjectTag
-        - Key: Name
-          Value: !Sub ${AWS::StackName} ${AWS::Region}
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
+        - { Key: Name, Value: !Sub "${AWS::StackName} ${AWS::Region}" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: !Ref ProjectTag }
+        - !If [HasFamilyTag, { Key: prx:dev:family, Value: !Ref FamilyTag }, !Ref "AWS::NoValue"]
       ValidationMethod: DNS
 
   CloudFrontDistribution:
@@ -563,12 +587,12 @@ Resources:
           - !Ref AWS::NoValue
         WebACLId: !If [HasCloudFrontWebACLId, !Ref CloudFrontWebACLId, !Ref "AWS::NoValue"]
       Tags:
-        - Key: Project
-          Value: !Ref ProjectTag
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: !Ref ProjectTag }
+        - !If [HasFamilyTag, { Key: prx:dev:family, Value: !Ref FamilyTag }, !Ref "AWS::NoValue"]
 
   CloudFrontOriginAccessIdentity:
     Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
