--- a/devops/aws-management/organization-trail.yml
+++ b/devops/aws-management/organization-trail.yml
@@ -34,12 +34,11 @@ Resources:
           # https://docs.aws.amazon.com/IAM/latest/UserGuide/access-analyzer-policy-generation.html#access-analyzer-policy-generation-cross-account
           - ObjectOwnership: BucketOwnerPreferred
       Tags:
-        - Key: Project
-          Value: Admin
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Production }
+        - { Key: prx:dev:application, Security }
   CloudTrailS3BucketPolicy:
     Type: AWS::S3::BucketPolicy
     Properties:
@@ -98,12 +97,11 @@ Resources:
       IsOrganizationTrail: true
       S3BucketName: !Ref CloudTrailS3Bucket
       Tags:
-        - Key: Project
-          Value: Admin
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Production }
+        - { Key: prx:dev:application, Security }
 
   GlueDatabase:
     Type: AWS::Glue::Database
