--- a/etc/root-account-activity-monitor.yml
+++ b/etc/root-account-activity-monitor.yml
@@ -63,12 +63,11 @@ Resources:
           - ExpirationInDays: 14
             Status: Enabled
       Tags:
-        - Key: Project
-          Value: Admin
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Production }
+        - { Key: prx:dev:application, Security }
   CloudTrailS3BucketPolicy:
     Type: AWS::S3::BucketPolicy
     Properties:
@@ -110,12 +109,11 @@ Resources:
       IsMultiRegionTrail: true
       S3BucketName: !Ref CloudTrailS3Bucket
       Tags:
-        - Key: Project
-          Value: Admin
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Production }
+        - { Key: prx:dev:application, Security }
   CloudTrailIsOrganizationTrailCustomResource:
     DependsOn:
       - CloudTrail
