--- a/devops/aws-management/organization-trail.yml
+++ b/devops/aws-management/organization-trail.yml
@@ -37,8 +37,8 @@ Resources:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { Key: prx:ops:environment, Production }
-        - { Key: prx:dev:application, Security }
+        - { Key: prx:ops:environment, Value: Production }
+        - { Key: prx:dev:application, Value: Security }
   CloudTrailS3BucketPolicy:
     Type: AWS::S3::BucketPolicy
     Properties:
@@ -100,8 +100,8 @@ Resources:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { Key: prx:ops:environment, Production }
-        - { Key: prx:dev:application, Security }
+        - { Key: prx:ops:environment, Value: Production }
+        - { Key: prx:dev:application, Value: Security }
 
   GlueDatabase:
     Type: AWS::Glue::Database
