--- a/etc/root-account-activity-monitor.yml
+++ b/etc/root-account-activity-monitor.yml
@@ -66,8 +66,8 @@ Resources:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { Key: prx:ops:environment, Production }
-        - { Key: prx:dev:application, Security }
+        - { Key: prx:ops:environment, Value: Production }
+        - { Key: prx:dev:application, Value: Security }
   CloudTrailS3BucketPolicy:
     Type: AWS::S3::BucketPolicy
     Properties:
@@ -112,8 +112,8 @@ Resources:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { Key: prx:ops:environment, Production }
-        - { Key: prx:dev:application, Security }
+        - { Key: prx:ops:environment, Value: Production }
+        - { Key: prx:dev:application, Value: Security }
   CloudTrailIsOrganizationTrailCustomResource:
     DependsOn:
       - CloudTrail
