--- a/etc/cur-quicksight-etl/template.yml
+++ b/etc/cur-quicksight-etl/template.yml
@@ -1,13 +1,42 @@
 AWSTemplateFormatVersion: "2010-09-09"
+# Report files are delivered to S3 with an object naming structure like:
+# s3://[report bucket name]/[report prefix]/[report name]/[report name]/year=2021/month=03/Athena-CUR-00001.snappy.parquet
+# A single partition projection is used to automatically partition by year and
+# month. The projection is called `date`, and is of type `date`. Using the
+# projection format `'year='yyyy'/month='MM`, queries that include the
+# partition column will be projected into the storage location with the
+# expected object naming structure.
+# The partition key for this `date` field is of type `string`. This is due to a
+# limitation with how the Presto engine that Athena uses handles date columns.
+# Querying a partition will look like:
+# WHERE "date" = 'year=2021/month=11'
+# or
+# WHERE "date" = date_format(date('2021-11-01'), 'year=%Y/month=%m')
+#
+# In order for date-based filters in QuickSight to function as expected, the
+# `date` field on the dataset in QuickSight must be converted from a string to
+# a date with a custom format of:
+# 'year='yyyy'/month='MM
+# Once that is done, filters can be created on the `date` field as though the
+# underlying column were a date type. QuickSight will translate the dates
+# coming out of the filters into the year=/month= string format when
+# constructing Athena queries.
+#
+# Because the object names only include year any month, filters should always
+# operate at the monthly level. If more granular date selection is needed, you
+# should, for example, filter by day using the line_item_usage_start_date field
 
 Description: >-
   Creates Cost and Usage reports, an S3 bucket to store the reports, and tables
-  in a Glue database that can query the data in S3
+  in a Glue database that can query the data in S3.
 
 Parameters:
   kDailyPrefix:
     Type: String
     Default: daily
+  kPartitionRange:
+    Type: String
+    Default: 18MONTHS
   ######
   QuickSightSeriveRoleArns:
     Type: CommaDelimitedList
@@ -112,25 +141,15 @@ Resources:
           typeOfData: file
           compressionType: none
           projection.enabled: "true"
-          # projection.date.type: date
-          # projection.date.range: year=2021/month=01,NOW
-          # projection.date.format: year=yyyy/month=MM
-          # projection.date.interval: "1"
-          # projection.date.interval.unit: MONTHS
-          # storage.location.template: !Sub s3://${ReportBucket}/${kDailyPrefix}/${DailyAthenaReportDefinition}/${DailyAthenaReportDefinition}/${!date}/
-
-          projection.year.type: "integer"
-          projection.year.range: "2020,2022"
-          projection.month.type: "integer"
-          projection.month.range: "01,12"
-          projection.month.digits: "2"
-          # s3://[report bucket name]/[report prefix]/[report name]/[report name]/year=2021/month=11/Athena-CUR-00001.snappy.parquet
-          storage.location.template: !Sub s3://${ReportBucket}/${kDailyPrefix}/${DailyAthenaReportDefinition}/${DailyAthenaReportDefinition}/year=${!year}/month=${!month}/
+          projection.date.type: date
+          projection.date.range: !Sub NOW-${kPartitionRange},NOW
+          projection.date.format: "'year='yyyy'/month='MM"
+          projection.date.interval: "1"
+          projection.date.interval.unit: MONTHS
+          storage.location.template: !Sub s3://${ReportBucket}/${kDailyPrefix}/${DailyAthenaReportDefinition}/${DailyAthenaReportDefinition}/${!date}/
         PartitionKeys:
-          - Name: year
-            Type: int
-          - Name: month
-            Type: int
+          - Name: date
+            Type: string
         StorageDescriptor:
           Columns:
             - Name: identity_line_item_id
