--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -473,6 +473,7 @@ Resources:
         SharedRedisReplicationGroupEndpointAddress: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointAddress
         SharedRedisReplicationGroupEndpointPort: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointPort
         NewRelicApiKeyPrxLite: !Ref NewRelicApiKeyPrxLite
+        CloudWatchLogGroupTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchLogGroupTaggerServiceToken
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
