--- a/stacks/apps/play.yml
+++ b/stacks/apps/play.yml
@@ -404,7 +404,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { Key: prx:dev:application, Value: Dovetail }
+        - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Play }
   ProxyTaskDefinition:
     Type: AWS::ECS::TaskDefinition
